--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="project">
                 <img src="./images/convex_hull_thumb.png" alt="Convex Hull Thumbnail">
-                <h3>Javscript Convex Hull Implementation</h3>
+                <h3>Javascript Convex Hull Implementation</h3>
                 <button class="modal-btn" data-target-modal="modal6">More Info</button>
             </div>
         </section>
