--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
             <h1>James Beach - Dev Portfolio</h1>
             <nav>
                 <ul>
-                    <li><a href="./index.html" class="header-btn">Projects</a></li>
+                    <li><a href="./index.html" class="header-btn">University Projects</a></li>
                     <li><a href="./aboutme.html" class="header-btn">About Me</a></li>
                     <li><a href="#footer" class="header-btn">Contact</a></li>
                 </ul>
@@ -31,42 +31,42 @@
             <p>
                 <b>Education & Career Goals</b>
                 <br><br>
-                As a recent Computer Science graduate, I have a strong foundation in software engineering principles and
-                experience working on real-world projects. At Kaluza, I began developing experience using agile
-                methodologies and gained proficiency in building large-scale web applications using React and
-                Typescript. I then went on to apply my
-                skills and experience in a more hands-on role and taking lead for DrawDojo, a large-scale university
-                group project
-                built using React and Typescript. During this same year, my third year at Heriot Watt, I was awarded the
-                Heriot Watt Deputy Principle
-                Award for achieving a minimum of 6 A grades out of the 8 modules I sat.
-                <br><br>
-                I hope to work in an environment that fosters continuous learning and growth, and allows me to work on
-                interesting and impactful projects. I am open to different sectors within software engineering, whether
-                it be web development, mobile development, or software engineering in general. My ultimate goal is to
-                become a well-rounded software engineer who can tackle complex problems with ease and contribute to
-                meaningful projects that make a positive impact on society.
-                <br><br>
-                With proficiency in various object-oriented programming languages such
-                as Java, C#, and C++, I am excited to contribute to a professional environment and continue to build
-                upon my skill set.
+                As a software engineer with hands-on experience at Clearwater Analytics and Kaluza, I have developed a
+                strong foundation in modern software engineering practices. At Clearwater Analytics, I honed my skills
+                in building and maintaining distributed systems using technologies such as Java, Kotlin, and AWS.
+                Getting hands on with infrastructure design and implementing micro-services have been key aspects of my
+                role, which also included automation and scaling of CI/CD pipelines using tools like Terraform and
+                Jenkins. My time at Kaluza further strengthened my proficiency in agile methodologies and web
+                application development with React and TypeScript.
+
+                I am eager to work in an environment that encourages continuous learning and provides opportunities to
+                tackle complex and impactful projects. I am open to various sectors within software engineering,
+                including web and mobile development, with the goal of becoming a well-rounded engineer capable of
+                addressing challenging problems and contributing to meaningful projects.
+
+                With a solid background in object-oriented programming languages such as Java, C#, and Kotlin, I am
+                excited to bring my expertise to a dynamic professional setting and continue expanding my skill set.
                 <br><br>
                 <b>Hobbies & Interests</b>
                 <br><br>
-                In my free time, I love problem solving and often find myself looking for puzzles or other problems to
-                solve. I enjoy challenging myself and learning new things, whether it's a new programming language or a
-                difficult riddle. I am also interested in subjects related to the VFX industry, not so much the design
-                aspect, but the technical aspect such as light or fluid simulations, and enjoy learning about new
-                advancements and techniques in the field.
-                <br><br>
-                Outside of the technical world, I also enjoy spending time in nature. I love taking walks through the
-                countryside or by the sea, and I find it a great way to unwind after a long day. I have a
-                passion for travel and exploring new places, and I am always looking for opportunities to see more of
-                the world. I'm also a certified PADI scuba diver, although being a student has made it difficult to
-                pursue this hobby as often as I'd like. Overall, I believe that pursuing hobbies and interests outside
-                of work is important for maintaining a healthy work-life balance and for keeping my mind sharp and
-                creative.
+                In my free time, I enjoy:
+            <ul>
+                <li>Problem-solving and seeking out puzzles and challenges to test my skills.</li>
+                <li>Learning new programming languages and exploring complex problems.</li>
+                <li>Exploring the technical aspects of the VFX industry, such as light and fluid simulations, and
+                    keeping up with advancements in the field.</li>
+                <li>Spending time in nature, whether it’s walking in the countryside or by the sea.</li>
+                <li>Traveling and exploring new places, which broadens my perspective and inspires creativity.</li>
+                <li>Being an avid movie-goer and exploring various genres and styles of film, which fuels my interest in
+                    storytelling and visual aesthetics.</li>
+                <li>Continuing to learn Mandarin, with the goal of achieving my HSK 1 certification shortly.</li>
+                <li>Looking forward to diving more frequently as a certified PADI scuba diver, as circumstances allow.</li>
+            </ul>
+
+            I believe that engaging in these hobbies and interests outside of work is essential for maintaining a
+            healthy work-life balance and keeping my creativity sharp.
             </p>
+
         </div>
     </main>
     <section id="footer">
@@ -74,7 +74,7 @@
             <div class="footer-container">
                 <p>Contact Me At:</p>
                 <p>james.beach.98@gmail.com</p>
-                <p>07306 885470</p>
+                <p>+44 7305 051401</p>
                 <p>
                     <a href="./cv.pdf" download>Download CV</a>
                 </p>
