--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>James Beach - Dev Portfolio</h1>
             <nav>
                 <ul>
-                    <li><a href="./index.html" class="header-btn">Projects</a></li>
+                    <li><a href="./index.html" class="header-btn">University Projects</a></li>
                     <li><a href="./aboutme.html" class="header-btn">About Me</a></li>
                     <li><a href="#footer" class="header-btn">Contact</a></li>
                 </ul>
